compiler/lume_hir/src/snapshots/lume_hir__lower__tests__conditional_snapshots@unless_else_empty.snap
---
source: compiler/lume_hir/src/lower.rs
description: "unless true { } else { }"
---
[
    Statement {
        id: 0,
        kind: Unless(
            Unless {
                id: 0,
                cases: [],
                location: <internal>:0:24,
            },
        ),
        location: <internal>:0:24,
    },
]
