compiler/lume_hir/src/snapshots/lume_hir__lower__tests__doc_comments_snapshots@class.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(r#\"/// This is a doc comment\n                class Foo { }\"#)"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Class(
                ClassDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: 'Foo',
                    builtin: false,
                    members: [],
                    type_parameters: [],
                    location: <internal>:42:55,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
