compiler/lume_hir/src/snapshots/lume_hir__lower__tests__doc_comments_snapshots@enum_case.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(r#\"enum Foo {\n                    /// This is a doc comment\n                    Bar\n                }\"#).unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Enum(
                EnumDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: Foo,
                    cases: [
                        EnumDefinitionCase {
                            id: 3235109210342419196,
                            name: Bar,
                            parameters: [],
                            location: <internal>:77:80,
                        },
                    ],
                    location: <internal>:0:98,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
