compiler/lume_hir/src/snapshots/lume_hir__lower__tests__doc_comments_snapshots@function.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(r#\"/// This is a doc comment\n                fn foo() -> void { }\"#)"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: 'foo',
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: 'void',
                        type_params: [],
                        location: <internal>:54:58,
                    },
                ),
                block: Block {
                    statements: [],
                    location: <internal>:59:62,
                },
                location: <internal>:42:62,
            },
        ),
    },
    statements: {},
    expressions: {},
}
