compiler/lume_hir/src/snapshots/lume_hir__lower__tests__doc_comments_snapshots@property.snap
---
source: compiler/lume_hir/src/lower.rs
description: "struct Foo {\n                /// This is a doc comment\n                pub bar: Int32 = 0;\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Struct(
                StructDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: Foo,
                    properties: [
                        Property {
                            prop_id: None,
                            visibility: Public,
                            name: Identifier {
                                name: "bar",
                                location: <internal>:75:78,
                            },
                            property_type: Type {
                                name: std::Int32,
                                type_params: [],
                                location: <internal>:80:85,
                            },
                            default_value: Some(
                                Expression {
                                    id: 0,
                                    location: <internal>:88:89,
                                    kind: Literal(
                                        Literal {
                                            id: 0,
                                            location: <internal>:88:89,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 0,
                                                    value: 0,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                            location: <internal>:71:90,
                        },
                    ],
                    methods: [],
                    type_parameters: [],
                    location: <internal>:0:104,
                },
            ),
        ),
    },
    statements: {},
    expressions: {
        0: Expression {
            id: 0,
            location: <internal>:88:89,
            kind: Literal(
                Literal {
                    id: 0,
                    location: <internal>:88:89,
                    kind: Int(
                        IntLiteral {
                            id: 0,
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
