compiler/lume_hir/src/snapshots/lume_hir__lower__tests__doc_comments_snapshots@trait.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(r#\"/// This is a doc comment\n                trait Foo { }\"#).unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Trait(
                TraitDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: Foo,
                    type_parameters: [],
                    methods: [],
                    location: <internal>:42:55,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
